fixes insufficient contrast issues

--- a/src/scss/ie8/_toc.scss
+++ b/src/scss/ie8/_toc.scss
@@ -1,7 +1,6 @@
 //toc.scss
 
 .dit-toc {
-  background: #EFEAE2;
   color: #424242;
 
   &__heading {
