--- a/src/scss/molecules/_form-section.scss
+++ b/src/scss/molecules/_form-section.scss
@@ -305,7 +305,7 @@
 }
 
 .help-text {
-  color: #828282;
+  color: #676969;
 }
 
 .form_top_block {
